[package]
name = "bitcoin-rpc"
version = "0.2.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
repository = "https://github.com/jeandudey/bitcoin-rpc"
homepage = "https://github.com/jeandudey/bitcoin-rpc"
license = "Apache-2.0/MIT"
readme = "README.md"
documentation = "https://docs.rs/bitcoin-rpc"
description = "Bitcoin JSON-RPC client."

[dependencies]
jsonrpc = "0.9"
serde = "1"
serde_derive = "1"
strason = "0.4"
